<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/hari" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titik_dua_spasi" />

        <TextView
            android:id="@+id/tv_jadwal_item_hari"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/strip_dua" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/nama_pelajaran" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titik_dua_spasi" />

        <TextView
            android:id="@+id/tv_jadwal_item_nama_pelajaran"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/strip_dua" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/jam_mulai" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titik_dua_spasi" />

        <TextView
            android:id="@+id/tv_jadwal_item_jam_awal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/strip_dua" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/jam_selesai" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titik_dua_spasi" />

        <TextView
            android:id="@+id/tv_jadwal_item_jam_selesai"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/strip_dua" />
    </LinearLayout>
</LinearLayout>