<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".IzinActivity"
    tools:showIn="@layout/activity_izin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="5dp">

            <ImageView
                android:id="@+id/iv_izin_photo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/student_image"
                android:src="@drawable/ic_student" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tv_izin_nama_lengkap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/nama_lengkap"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/tv_izin_tempat_tgl_lahir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/tempat_tanggal_lahir"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/tv_izin_jenis_kelamin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/jenis_kelamin"
                    android:textAlignment="center" />

            </LinearLayout>
        </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/nis" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titik_dua_spasi" />

                <TextView
                    android:id="@+id/tv_izin_nis"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nis" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/nisn" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titik_dua_spasi" />

                <TextView
                    android:id="@+id/tv_izin_nisn"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nisn" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/status_pelajar" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titik_dua_spasi" />

                <TextView
                    android:id="@+id/tv_izin_status_pelajar"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/status_pelajar" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/jenis_perizinan" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titik_dua_spasi" />

                <RadioGroup
                    android:id="@+id/rg_izin_jenis_perizinan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_izin_sakit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/sakit" />

                    <RadioButton
                        android:id="@+id/rb_izin_izin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/izin" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/bukti_izin" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titik_dua_spasi" />

                <Button
                    android:id="@+id/btn_izin_pilih_file"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:background="@drawable/button_background"
                    android:text="Pilih File"
                    android:textColor="@color/white"
                    android:textStyle="bold" />


            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>