<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ProfilActivity"
    tools:showIn="@layout/activity_profil">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="5dp">

            <ImageView
                android:id="@+id/iv_profil_photo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/student_image"
                android:src="@drawable/ic_student" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tv_profil_nama_lengkap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/nama_lengkap"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/tv_profil_tempat_tgl_lahir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/tempat_tanggal_lahir"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/tv_profil_jenis_kelamin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/jenis_kelamin"
                    android:textAlignment="center" />

            </LinearLayout>
        </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/nis" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titik_dua_spasi" />

                <TextView
                    android:id="@+id/tv_profil_nis"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nis" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/nisn" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titik_dua_spasi" />

                <TextView
                    android:id="@+id/tv_profil_nisn"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nisn" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/status_pelajar" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titik_dua_spasi" />

                <TextView
                    android:id="@+id/tv_profil_status_pelajar"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/status_pelajar" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sekolah_asal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titik_dua_spasi" />

                <TextView
                    android:id="@+id/tv_profil_sekolah_asal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sekolah_asal" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/agama" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titik_dua_spasi" />

                <TextView
                    android:id="@+id/tv_agama"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/agama" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/nama_ayah" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titik_dua_spasi" />

                <TextView
                    android:id="@+id/tv_profil_nama_ayah"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nama_ayah" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/nama_ibu" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titik_dua_spasi" />

                <TextView
                    android:id="@+id/tv_profil_nama_ibu"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nama_ibu" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/status_keluarga" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titik_dua_spasi" />

                <TextView
                    android:id="@+id/tv_profil_status_keluarga"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/status_keluarga" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/anak_ke" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titik_dua_spasi" />

                <TextView
                    android:id="@+id/tv_profil_anak_ke"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/anak_ke" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/alamat" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titik_dua_spasi" />

                <TextView
                    android:id="@+id/tv_profil_alamat"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/alamat" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>